Updating in react
