# my-express-api/src/types/category.types.ts
@@ -1,4 +1,4 @@
-export interface CategoryCreate {
+export interface CategoryNoId {
   colorHex: string;
   description: string;
   name: string;
